import "DataChunk.proto";

option java_outer_classname="GetDocumentsResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message GetDocumentsResponse 
{
	optional DataChunk dataChunk = 1;
}